# RoboticsProject2

./: CMakeLists.txt  README.md  ccMap.pgm  ccMap.yaml  package.xml
bags/: frames.gv
launch/: amcl.launch  gmap.launch  link.launch
map/: map.pgm  map.yaml
rviz/: loc.rviz  map.rviz
scripts/: occupancy_grid_processing.py
src/: CustomMapSaver.cpp  OdometryBroadcaster.cpp  PathBroadcaster.cpp
srv/: save_map.srv
